tests/expectations/compiler/constants/decreasing_constant_loop_bound_fail.out
DCE_ENABLED:
Error [ELUN0379000]: The loop range must be increasing.
    --> compiler-test:5:26
     |
   5 |         const STOP: u8 = 0u8;
     |                          ^^^

DCE_DISABLED:
Error [ELUN0379000]: The loop range must be increasing.
    --> compiler-test:5:26
     |
   5 |         const STOP: u8 = 0u8;
     |                          ^^^
